sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var int i= 0

while( i>0, i< getNombreValeurs()-1,faitechange==true)
faitechange=false
do
   if  (plusPetit(i+1,i))
    {echange(i+1:Int, i:Int),faitechange=true};
    else
   { i=i+1} 
}
